# smuit-theme

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  README.md  commitlint.config.js  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: README.md  rename-to-smuit-org.md  self-host-fonts.md  typography-scale-bump.md
.claude/: bits.md  component.md  css-authoring.md  distribution.md  gitflow.md  karpathy.md  launch.json  process.md  settings.json  styling.md  svelte.md  testing.md  tooling.md  variants.md
.claude/commands/: create-bit.md  create-component.md  create-from-design.md  create-mui.md  create-shadcn.md
.github/workflows/: ci.yml  release.yml
scripts/: auto-changeset.mjs  fetch-fonts.mjs
smuit-theme-generator/: .gitignore  pyproject.toml
smuit-theme-generator/src/smuit_theme_generator/: __init__.py  cli.py  emit.py  model.py  ramp.py
smuit-theme-generator/tests/: fixtures.py  test_emit.py  test_model.py  test_ramp.py
src/: app.d.ts
src/assets/: output.css  output.min.css  theme-input.toml
src/assets/fonts/: fonts.css
src/lib/: ThemeToggle.css  ThemeToggle.svelte  ThemeToggle.svelte.test.ts  index.ts  theme.svelte.test.ts  theme.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
